# UOFastMCP

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  security_config.yaml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/uofast_mcp/: MCP_SERVER_README.md  __init__.py  app.py  server.py
src/uofast_mcp/admin/: router.py  schemas.py  setup_router.py  ui.py
src/uofast_mcp/core/: __init__.py  connection_manager.py  uopy_operations.py
src/uofast_mcp/security/: __init__.py  audit.py  auth.py  database.py  middleware.py  models.py  permissions.py  rbac.py
src/uofast_mcp/setup/: router.py
src/uofast_mcp/setup/templates/: base.html  client_setup.html  complete.html  connection.html  connections.html  security.html  welcome.html
src/uofast_mcp/utils/: __init__.py  config_loader.py  credential_store.py  mistral_tool_formatter.py
