[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uofast-mcp"
version = "1.1.3"
description = "Enterprise MCP server for U2 UniData/UniVerse — JWT auth, RBAC, audit logging, admin UI"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "RoKiPaRk"}
]
keywords = [
    "mcp", "model-context-protocol", "unidata", "universe", "u2",
    "database", "claude", "llm", "ai", "rbac", "jwt"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "uopy>=1.4.0",
    "uofast-orm",
    "python-dotenv>=1.0.0",
    # HTTP transport & API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "itsdangerous>=2.0.0",
    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Database (security/audit store)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    # Config validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    # Admin UI
    "sqladmin>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/RoKiPaRk/UOFastMCP"
Repository = "https://github.com/RoKiPaRk/UOFastMCP.git"
"Bug Tracker" = "https://github.com/RoKiPaRk/UOFastMCP/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "build",
    "twine",
]

[project.scripts]
uofast-mcp = "uofast_mcp:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uofast_mcp = [
    "setup/templates/*.html",
    "py.typed",
]
